@@ -1,1 +1,1 @@
-1.4.40-rc3
+1.4.40
